<resources>
    <string name="app_name">Inspection Reporter</string>
    <string name="choose_a_restaurant">Choose a Restaurant:</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="most_recent_insp_num_issues_and_date">"%1$d issue(s), %2$d, %3$d, %4$d"</string>
    <string name="num_issues_and_date_less_than_ten_issues">"%1$d issue(s), %2$s"</string>
    <string name="num_issues_and_date_less_than_hundred_issues">"%1$d issue(s), %2$s"</string>
    <string name="num_issues_and_date">"%1$d issue(s), %2$s"</string>
    <string name="date_within_30_days">"%1$d days ago"</string>
    <string name="date_after_30_days">"%1$s %2$d"</string>
    <string name="date">__ issues, date</string>
    <string name="critical_issues">"# Critical Issues: %1$d"</string>
    <string name="non_critical_issues">"# Non-Critical Issues: %1$d"</string>
    <string name="list_of_violations">List of Violations:</string>
    <string name="no_inspections_message">No inspections found.</string>
    <string name="name">"Name: "</string>
    <string name="address">"Address: "</string>
    <string name="gpss_coordinate">GPS Coordinate: (</string>
    <string name="done_on">"Done on "</string>
    <string name="textview">TextView</string>
    <string name="inspection_type">Inspection Type:</string>
    <string name="hazard_level">Hazard Level:</string>
    <string name="month">Month</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="aug">Aug</string>
    <string name="sept">Sept</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="temperature_violation">Temperature Violation</string>
    <string name="sanitary_violation">Sanitary Violation</string>
    <string name="pest_violation">Pest Violation</string>
    <string name="permit_violation">Permit Violation</string>
    <string name="bad_food_violation">Bad Food Violation</string>
    <string name="degrees_celsius">°C</string>
    <string name="cool">cool</string>
    <string name="thaw">thaw</string>
    <string name="thermometer">thermometer</string>
    <string name="sanit">sanit</string>
    <string name="wash">wash</string>
    <string name="clean">clean</string>
    <string name="contam">contam</string>
    <string name="pest">pest</string>
    <string name="no_violations">No Violations</string>
    <string name="inspection_date">Inspection Date: %1$s %2$d, %3$d</string>
    <string name="inspection_details">Inspection Details</string>
    <string name="critical">Critical</string>
    <string name="not_critical">Not Critical</string>
    <string name="inspection_report">Inspection Report</string>
    <string name="inspection_date_mm_dd_yyyy">Inspection Date: %MMM %DD %YYYY</string>
    <string name="violation_type">Violation type</string>
    <string name="filler_name_of_restaurant">Name: name of restaurant</string>
    <string name="filler_address">Address: address</string>
    <string name="filler_gps_coordinate">GPS Coordinate: (__, __)</string>
    <string name="filler_inspection_type">inspection type</string>
    <string name="go_to_list">Go to list</string>
    <string name="list_of_all_restaurants">List of All Restaurants</string>
    <string name="there_is_new_data_to_be_updated">There is new data to be updated!</string>
    <string name="update_now">Update now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="go_to_map">Go To Map</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait...</string>
    <string name="downloading_data">...downloading data...</string>
    <string name="saving_data_message">Data downloaded! Saving data...</string>
    <string name="hazard_level_not_found">Hazard Level: Not found</string>
    <string name="failed_to_get_current_location">failed to get current location</string>
    <string name="high">High</string>
    <string name="date_year_or_more">"%1$s %2$d"</string>
    <string name="follow_up">Follow-Up</string>
    <string name="routine">Routine</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="comma">", "</string>
    <string name="search">"Search"</string>
    <string name="search_options">Search Options</string>
    <string name="violations_in_last_year">Violations in last year:</string>
    <string name="favourite">Favourite:</string>
    <string name="string_to_search_for">string to search for</string>
    <string name="violations"># violations</string>
    <string name="Reset">"Reset to Default"</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="restaurant_search">Restaurant Search:</string>
    <string name="of_your_fav_rest_updated">"%1$d%2$s%3$d of Your Favourite Restaurants Updated"</string>
    <string name="ok">OK</string>
    <string name="zero_of_your_fav_restaurants_updated">0/0 of Your Favourite Restaurant Updated</string>
</resources>