<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/DownloadFrag_btn_cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/DownloadFrag_txt_pleaseWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/please_wait"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DownloadFrag_txt_downloadingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloading_data"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/DownloadFrag_btn_cancel"
        app:layout_constraintStart_toStartOf="@+id/DownloadFrag_txt_pleaseWait"
        app:layout_constraintTop_toTopOf="@+id/DownloadFrag_btn_cancel" />

    <ImageView
        android:id="@+id/DownloadFrag_image_download"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/DownloadFrag_txt_downloadingData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DownloadFrag_txt_pleaseWait"
        app:srcCompat="@drawable/refresh_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>