<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".ui.AllRestaurantListActivity">

    <include
        android:id="@+id/toolbarRestaurantList"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AllRest_txt_chooseRestaurant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/choose_a_restaurant"
        android:textSize="16sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/AllRest_list_viewAllRestaurants"
        app:layout_constraintEnd_toStartOf="@+id/List_btn_save_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRestaurantList" />

    <ListView
        android:id="@+id/AllRest_list_viewAllRestaurants"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/List_btn_goToMap"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/List_btn_goToMap"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/go_to_map"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRestaurantList" />

    <Button
        android:id="@+id/List_btn_save_search"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:text="@string/search"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/List_btn_goToMap"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRestaurantList" />

</androidx.constraintlayout.widget.ConstraintLayout>