<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <include
        android:id="@+id/toolbarSingleRestaurant"
        layout="@layout/toolbar" />

    <ImageButton
        android:id="@+id/SingleRest_btn_favourite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/toolbarSingleRestaurant"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/star_blank" />

    <TextView
        android:id="@+id/SingleRest_txt_RestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarSingleRestaurant"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/filler_name_of_restaurant"
        android:textColor="#000" />

    <TextView
        android:id="@+id/SingleRest_txt_restaurantAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SingleRest_txt_RestaurantName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:textColor="#000"
        android:text="@string/filler_address" />

    <TextView
        android:id="@+id/SingleRest_txt_inspectionReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SingleRest_btn_restaurantGPSCoordinates"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57sp"
        android:layout_marginTop="10sp"
        android:text="@string/inspection_report"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/SingleRest_list_inspections"
        android:layout_width="410dp"
        android:layout_height="629dp"
        android:layout_below="@+id/SingleRest_txt_inspectionReport"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp" />

    <Button
        android:id="@+id/SingleRest_btn_restaurantGPSCoordinates"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_below="@+id/SingleRest_txt_restaurantAddress"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:background="@null"
        android:gravity="left"
        android:textColor="@android:color/holo_blue_dark"
        android:text="GPS Coordinates" />


</RelativeLayout>